[gd_scene load_steps=2 format=2]

[ext_resource path="res://SeleccionPersonaje.gd" type="Script" id=1]

[node name="SeleccionPersonaje" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 240.0
margin_bottom = 50.0
text = "Selecciona tu Personaje"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 240.0
margin_bottom = 58.0

[node name="CharacterChoices" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 240.0
margin_bottom = 82.0
alignment = 1

[node name="Maggy" type="Button" parent="VBoxContainer/CharacterChoices"]
margin_left = 20.0
margin_right = 72.0
margin_bottom = 20.0
text = "Maggy"

[node name="Yuli" type="Button" parent="VBoxContainer/CharacterChoices"]
margin_left = 76.0
margin_right = 111.0
margin_bottom = 20.0
text = "Yuli"

[node name="Brayan" type="Button" parent="VBoxContainer/CharacterChoices"]
margin_left = 115.0
margin_right = 170.0
margin_bottom = 20.0
text = "Brayan"

[node name="Edgar" type="Button" parent="VBoxContainer/CharacterChoices"]
margin_left = 174.0
margin_right = 220.0
margin_bottom = 20.0
text = "Edgar"

[node name="SelectedCharacterLabel" type="Label" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 240.0
margin_bottom = 100.0
align = 1

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 240.0
margin_bottom = 124.0
alignment = 1

[node name="BotonAtras" type="Button" parent="VBoxContainer/ActionButtons"]
margin_left = 58.0
margin_right = 103.0
margin_bottom = 20.0
text = "Atr√°s"

[node name="BotonConfirmar" type="Button" parent="VBoxContainer/ActionButtons"]
margin_left = 107.0
margin_right = 181.0
margin_bottom = 20.0
disabled = true
text = "Confirmar"

[connection signal="pressed" from="VBoxContainer/CharacterChoices/Maggy" to="." method="_on_personaje_selected" binds= [ "Maggy" ]]
[connection signal="pressed" from="VBoxContainer/CharacterChoices/Yuli" to="." method="_on_personaje_selected" binds= [ "Yuli" ]]
[connection signal="pressed" from="VBoxContainer/CharacterChoices/Brayan" to="." method="_on_personaje_selected" binds= [ "Brayan" ]]
[connection signal="pressed" from="VBoxContainer/CharacterChoices/Edgar" to="." method="_on_personaje_selected" binds= [ "Edgar" ]]
[connection signal="pressed" from="VBoxContainer/ActionButtons/BotonAtras" to="." method="_on_BotonAtras_pressed"]
[connection signal="pressed" from="VBoxContainer/ActionButtons/BotonConfirmar" to="." method="_on_BotonConfirmar_pressed"]
